* Charts support for dark themes
* Charts removed some chart background grid elements for less crowded charts
* Charts add support for echarts when loading bcduiChart2, image export and some chart types are limitted
* Add support for radar chart when using it
* Cube allows dims-only and measure-only reports, for measure only, you can decide if the data should be aggregated or not
* Renderer doesn't need an existing targetHtml nor defining one at all on creation. Member function setTargetHtml can be used to set and change target.
The Renderer either works directly with the specified element or (in case of specified via id) does an element lookup by id.
* Excel Report export moved to client side using FileSaver.js
* Detail Export got column chooser options, check exportMode attribute for a customized column export/save selection and a wrqModify callback function
* Remove client refresh on detail export which is not needed. Change context menu action from
    <JavaScriptAction>bcdui._migPjs._$(this.eventSrcElement).trigger("cubeActions:contextMenuCubeClientRefresh", {actionId: 'exportWysiwygAsExcel'})</JavaScriptAction>
    to
    <JavaScriptAction>bcdui._migPjs._$(this.eventSrcElement).trigger("cubeActions:reportExport")</JavaScriptAction>
* Added support for voice and free-text control

. Widgets
* periodChooser got new options: useSimpleXPath to use a straight forward xpath, autoPopup to directly show the popup calendar and suppressButtons to not show any buttons at all, showClearButton (default on for non mandatory) to allow cleaning of input
* createFilterTableHeader function to add a filter header on a renderer. Uses createTableHeadFilter function which can be reused for other header filters (like grid) 
* enableNavPath attribute to turn on/off navPath linkage (default is off (false))
* New widget: "slider", based on noUiSlider implementation
* Context menu: added support for multi-context, i.e. <div contextId="is-editable is-removable"></div>